--- a/RogueModuleTech/AMS/Weapon_LRM_FLARELAUNCHER_AMS.json
+++ b/RogueModuleTech/AMS/Weapon_LRM_FLARELAUNCHER_AMS.json
@@ -70,7 +70,7 @@
         "Model": "Chaff CounterMeasure",
         "UIName": "AMS Flare",
         "Id": "Weapon_LRM_FLARELAUNCHER_AMS",
-        "Name": "ChaffFlare RL5",
+        "Name": "Counter Flare",
         "Details": "These Flare Launchers are an Automatic Anti-Missile-System firing a cloud of small explosive warheads with chaff at any incoming missile trying to destroy it or disorient is guidance.<b><color=#F79232>5 SALVOS</color> <b><color=#099ff2>VOLATILE!</color></b>",
         "Icon": "uixSvgIcon_weapon_Missile"
     },
