switched "emod_engine_cooling" to "Gear_Engine_Heatsinks"

--- a/MechEngineer/Settings.defaults.json
+++ b/MechEngineer/Settings.defaults.json
@@ -41,7 +41,7 @@
         ],
         "MechDefEngine" : true,
         "MechDefCoolingDef" : "emod_kit_shs",
-        "MechDefHeatBlockDef" : "emod_engine_cooling",
+        "MechDefHeatBlockDef" : "Gear_Engine_Heatsinks",
         "MechDefCoreDummy" : "emod_engine_dummy",
         "UpgradeDefSkip" : [
             
