--- a/RogueModuleTech/Weapons/Weapon_VehicleGrenadeLauncher.json
+++ b/RogueModuleTech/Weapons/Weapon_VehicleGrenadeLauncher.json
@@ -1,7 +1,7 @@
 {
     "Custom": {
         "Category": [
-			{ "CategoryID": "w/a/o/mortair" }
+			{ "CategoryID": "w/a/o/mortar" }
 		],
         "InventorySorter": {
             "SortKey": "03011"
