--- a/CivilWar 3062-3067/chassis/chassisdef_Phalanx.json
+++ b/CivilWar 3062-3067/chassis/chassisdef_Phalanx.json
@@ -49,7 +49,7 @@
     },
     {
       "MountedLocation": "CenterTorso",
-      "ComponentDefID": "PA_Internals_Stealth",
+      "ComponentDefID": "Type_Stealthed",
       "SimGameUID": null,
       "ComponentDefType": "Upgrade",
       "HardpointSlot": -1,
@@ -71,7 +71,7 @@
     },
     {
       "MountedLocation": "Head",
-      "ComponentDefID": "PA_Soldier",
+      "ComponentDefID": "PA_Control",
       "SimGameUID": null,
       "ComponentDefType": "Upgrade",
       "HardpointSlot": -1,
