--- a/CivilWar 3062-3067/chassis/chassisdef_Phalanx.json
+++ b/CivilWar 3062-3067/chassis/chassisdef_Phalanx.json
@@ -153,20 +153,16 @@
       "Location": "LeftArm",
       "Hardpoints": [
         {
-          "WeaponMount": "AntiPersonnel",
-          "Omni": true
+          "WeaponMountID": "BattleArmor",
+          "Omni": false
         },
         {
-          "WeaponMount": "AntiPersonnel",
-          "Omni": true
-        },
-        {
-          "WeaponMount": "AntiPersonnel",
-          "Omni": true
+          "WeaponMountID": "BattleArmor",
+          "Omni": false
         }
       ],
       "Tonnage": 0,
-      "InventorySlots": 5,
+      "InventorySlots": 3,
       "MaxArmor": 100,
       "MaxRearArmor": -1,
       "InternalStructure": 100
@@ -175,20 +171,16 @@
       "Location": "LeftTorso",
       "Hardpoints": [
         {
-          "WeaponMount": "AntiPersonnel",
-          "Omni": true
+          "WeaponMountID": "BattleArmor",
+          "Omni": false
         },
         {
-          "WeaponMount": "AntiPersonnel",
-          "Omni": true
-        },
-        {
-          "WeaponMount": "AntiPersonnel",
-          "Omni": true
+          "WeaponMountID": "BattleArmor",
+          "Omni": false
         }
       ],
       "Tonnage": 0,
-      "InventorySlots": 5,
+      "InventorySlots": 2,
       "MaxArmor": 200,
       "MaxRearArmor": 50,
       "InternalStructure": 120
@@ -197,36 +189,16 @@
       "Location": "CenterTorso",
       "Hardpoints": [
         {
-          "WeaponMount": "AntiPersonnel",
-          "Omni": true
-        },
-        {
-          "WeaponMount": "AntiPersonnel",
-          "Omni": true
-        },
-        {
-          "WeaponMount": "AntiPersonnel",
-          "Omni": true
-        },
-        {
-          "WeaponMountID": "Special",
+          "WeaponMountID": "BattleArmor",
           "Omni": false
         },
         {
-          "WeaponMountID": "Special",
-          "Omni": false
-        },
-        {
-          "WeaponMountID": "SpecialMelee",
-          "Omni": false
-        },
-        {
-          "WeaponMountID": "SpecialMelee",
+          "WeaponMountID": "BattleArmor",
           "Omni": false
         }
       ],
       "Tonnage": 0,
-      "InventorySlots": 10,
+      "InventorySlots": 6,
       "MaxArmor": 250,
       "MaxRearArmor": 100,
       "InternalStructure": 150
@@ -235,20 +207,16 @@
       "Location": "RightTorso",
       "Hardpoints": [
         {
-          "WeaponMount": "AntiPersonnel",
-          "Omni": true
+          "WeaponMountID": "BattleArmor",
+          "Omni": false
         },
         {
-          "WeaponMount": "AntiPersonnel",
-          "Omni": true
-        },
-        {
-          "WeaponMount": "AntiPersonnel",
-          "Omni": true
+          "WeaponMountID": "BattleArmor",
+          "Omni": false
         }
       ],
       "Tonnage": 0,
-      "InventorySlots": 5,
+      "InventorySlots": 2,
       "MaxArmor": 200,
       "MaxRearArmor": 50,
       "InternalStructure": 120
@@ -257,20 +225,16 @@
       "Location": "RightArm",
       "Hardpoints": [
         {
-          "WeaponMount": "AntiPersonnel",
-          "Omni": true
+          "WeaponMountID": "BattleArmor",
+          "Omni": false
         },
         {
-          "WeaponMount": "AntiPersonnel",
-          "Omni": true
-        },
-        {
-          "WeaponMount": "AntiPersonnel",
-          "Omni": true
+          "WeaponMountID": "BattleArmor",
+          "Omni": false
         }
       ],
       "Tonnage": 0,
-      "InventorySlots": 5,
+      "InventorySlots": 3,
       "MaxArmor": 100,
       "MaxRearArmor": -1,
       "InternalStructure": 100
@@ -279,7 +243,7 @@
       "Location": "LeftLeg",
       "Hardpoints": [],
       "Tonnage": 0,
-      "InventorySlots": 2,
+      "InventorySlots": 1,
       "MaxArmor": 150,
       "MaxRearArmor": -1,
       "InternalStructure": 120
@@ -288,7 +252,7 @@
       "Location": "RightLeg",
       "Hardpoints": [],
       "Tonnage": 0,
-      "InventorySlots": 2,
+      "InventorySlots": 1,
       "MaxArmor": 150,
       "MaxRearArmor": -1,
       "InternalStructure": 120
@@ -343,7 +307,7 @@
     "items": [
       "PowerArmor",
       "ProtoMech",
-	  "MR-Resize-0.5"
+      "MR-Resize-0.5"
     ],
     "tagSetSourceFile": ""
   },
