--- a/CivilWar 3062-3067/chassis/chassisdef_Phalanx.json
+++ b/CivilWar 3062-3067/chassis/chassisdef_Phalanx.json
@@ -71,7 +71,7 @@
     },
     {
       "MountedLocation": "Head",
-      "ComponentDefID": "PA_Control",
+      "ComponentDefID": "PA_Controls",
       "SimGameUID": null,
       "ComponentDefType": "Upgrade",
       "HardpointSlot": -1,
@@ -159,10 +159,18 @@
         {
           "WeaponMountID": "BattleArmor",
           "Omni": false
+        },
+		{
+          "WeaponMountID": "BattleArmor",
+          "Omni": false
+        },
+        {
+          "WeaponMountID": "BattleArmor",
+          "Omni": false
         }
       ],
       "Tonnage": 0,
-      "InventorySlots": 3,
+      "InventorySlots": 5,
       "MaxArmor": 100,
       "MaxRearArmor": -1,
       "InternalStructure": 100
@@ -177,10 +185,18 @@
         {
           "WeaponMountID": "BattleArmor",
           "Omni": false
+        },
+		{
+          "WeaponMountID": "BattleArmor",
+          "Omni": false
+        },
+        {
+          "WeaponMountID": "BattleArmor",
+          "Omni": false
         }
       ],
       "Tonnage": 0,
-      "InventorySlots": 2,
+      "InventorySlots": 4,
       "MaxArmor": 200,
       "MaxRearArmor": 50,
       "InternalStructure": 120
@@ -195,10 +211,18 @@
         {
           "WeaponMountID": "BattleArmor",
           "Omni": false
+        },
+		{
+          "WeaponMountID": "BattleArmor",
+          "Omni": false
+        },
+        {
+          "WeaponMountID": "BattleArmor",
+          "Omni": false
         }
       ],
       "Tonnage": 0,
-      "InventorySlots": 6,
+      "InventorySlots": 8,
       "MaxArmor": 250,
       "MaxRearArmor": 100,
       "InternalStructure": 150
@@ -213,10 +237,18 @@
         {
           "WeaponMountID": "BattleArmor",
           "Omni": false
+        },
+		{
+          "WeaponMountID": "BattleArmor",
+          "Omni": false
+        },
+        {
+          "WeaponMountID": "BattleArmor",
+          "Omni": false
         }
       ],
       "Tonnage": 0,
-      "InventorySlots": 2,
+      "InventorySlots": 4,
       "MaxArmor": 200,
       "MaxRearArmor": 50,
       "InternalStructure": 120
@@ -231,10 +263,18 @@
         {
           "WeaponMountID": "BattleArmor",
           "Omni": false
+        },
+		{
+          "WeaponMountID": "BattleArmor",
+          "Omni": false
+        },
+        {
+          "WeaponMountID": "BattleArmor",
+          "Omni": false
         }
       ],
       "Tonnage": 0,
-      "InventorySlots": 3,
+      "InventorySlots": 5,
       "MaxArmor": 100,
       "MaxRearArmor": -1,
       "InternalStructure": 100
