--- a/Screams/CustomAmmoCategoriesSettings.json
+++ b/Screams/CustomAmmoCategoriesSettings.json
@@ -192,5 +192,40 @@
 "SelectionStateMoveBaseProcessMousePosTrottle": 4,
 "UpdateReticleTrottle":8,
 "showMissBehavior":"Default",
-"extendedBraceBehavior":true
+"extendedBraceBehavior":true,
+  "DefaultAoEDamageMult": {
+    "Building": {
+      "Range": 1.2,
+      "Damage": 0.7
+    }
+  },
+  "screamsIds": [
+    "scream01",
+    "Play_Panic5",
+    "Play_Panic4",
+    "Play_Panic7",
+    "Play_Panic6",
+    "Play_Panic1",
+    "Play_Panic3",
+    "Play_Panic2",
+    "Play_Panic9",
+    "Play_Panic8",
+    "Play_Panic18",
+    "Play_Panic19",
+    "Play_Panic14",
+    "Play_Panic15",
+    "Play_Panic16",
+    "Play_Panic17",
+    "Play_Panic10",
+    "Play_Panic11",
+    "Play_Panic12",
+    "Play_Panic13",
+    "Play_Panic25",
+    "Play_Panic24",
+    "Play_Panic26",
+    "Play_Panic21",
+    "Play_Panic20",
+    "Play_Panic23",
+    "Play_Panic22"
+  ]
 }
