--- a/Screams/CustomAmmoCategoriesSettings.json
+++ b/Screams/CustomAmmoCategoriesSettings.json
@@ -197,7 +197,19 @@
     "Building": {
       "Range": 1.2,
       "Damage": 0.7
-    }
+    },
+	"Turret": {
+      "Range": 0.9,
+      "Damage": 0.8
+    },
+	"Vehicle": {
+      "Range": 0.8,
+      "Damage": 0.9
+    },
+	"Mech": {
+      "Range": 1,
+      "Damage": 1
+    },
   },
   "screamsIds": [
     "scream01",
