--- a/RogueTech Core/Contracts/ambushconvoy/2/AmbushConvoy_Pirate_EasyPickings.json
+++ b/RogueTech Core/Contracts/ambushconvoy/2/AmbushConvoy_Pirate_EasyPickings.json
@@ -793,7 +793,7 @@
                 "lanceDefId": "Tagged",
                 "lanceTagSet": {
                     "items": [
-                        "lance_type_OpForConvoy"
+                        "lance_type_convoy"
                     ],
                     "tagSetSourceFile": "tags/LanceTags"
                 },
